[gd_scene load_steps=26 format=2]

[ext_resource path="res://Scenes/Actors/MageBoss/MageBoss.gd" type="Script" id=1]
[ext_resource path="res://Assets/Enemies/mage.png" type="Texture" id=2]
[ext_resource path="res://Scenes/UI/HealthBar.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Enemies/fireball_new.png" type="Texture" id=4]
[ext_resource path="res://Assets/Enemies/waterball.png" type="Texture" id=5]
[ext_resource path="res://Assets/Enemies/WindBall.png" type="Texture" id=6]
[ext_resource path="res://Assets/Enemies/EarthBall.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14.7905, 9.28471 )

[sub_resource type="CircleShape2D" id=2]
radius = 155.866

[sub_resource type="Animation" id=3]
length = 0.6

[sub_resource type="Animation" id=4]
length = 0.6

[sub_resource type="Animation" id=5]
length = 0.4
loop = true

[sub_resource type="Animation" id=6]
length = 0.3

[sub_resource type="Animation" id=7]
length = 0.3

[sub_resource type="CircleShape2D" id=8]
radius = 4.51876

[sub_resource type="Curve" id=9]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=10]
curve = SubResource( 9 )

[sub_resource type="ParticlesMaterial" id=11]
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 3.0
scale_curve = SubResource( 10 )
color = Color( 0.968627, 0.541176, 0.00392157, 1 )

[sub_resource type="CircleShape2D" id=12]
radius = 4.51876

[sub_resource type="Curve" id=13]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=14]
curve = SubResource( 13 )

[sub_resource type="ParticlesMaterial" id=15]
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 3.0
scale_curve = SubResource( 14 )
color = Color( 0, 0.317647, 0.843137, 1 )

[sub_resource type="ParticlesMaterial" id=16]
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 3.0
scale_curve = SubResource( 14 )
color = Color( 0.584314, 0.796078, 0.878431, 1 )

[sub_resource type="ParticlesMaterial" id=17]
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 3.0
scale_curve = SubResource( 14 )
color = Color( 0.172549, 0.117647, 0.12549, 1 )

[sub_resource type="ParticlesMaterial" id=18]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[node name="MageBoss" type="KinematicBody2D" groups=[
"Enemy",
]]
collision_layer = 4
collision_mask = 3
script = ExtResource( 1 )
angular_velocity = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.297638, 0.543308 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Wzrok" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wzrok"]
position = Vector2( -0.117981, 4.44547 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 3 )
anims/Die = SubResource( 4 )
anims/Hurt = SubResource( 5 )
anims/Idle = SubResource( 6 )
anims/Walk = SubResource( 7 )

[node name="WaterFireCenter" type="Node2D" parent="."]

[node name="Fireball" type="Area2D" parent="WaterFireCenter"]
position = Vector2( -40, 0 )
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="WaterFireCenter/Fireball"]
shape = SubResource( 8 )

[node name="Particles2D2" type="Particles2D" parent="WaterFireCenter/Fireball"]
position = Vector2( -0.166847, 0.250281 )
amount = 10
lifetime = 0.2
local_coords = false
process_material = SubResource( 11 )

[node name="Sprite" type="Sprite" parent="WaterFireCenter/Fireball"]
texture = ExtResource( 4 )

[node name="Waterball" type="Area2D" parent="WaterFireCenter"]
position = Vector2( 40, 0 )
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="WaterFireCenter/Waterball"]
shape = SubResource( 12 )

[node name="Particles2D3" type="Particles2D" parent="WaterFireCenter/Waterball"]
amount = 10
lifetime = 0.2
local_coords = false
process_material = SubResource( 15 )

[node name="Sprite" type="Sprite" parent="WaterFireCenter/Waterball"]
texture = ExtResource( 5 )

[node name="EarthWindCenter" type="Node2D" parent="."]

[node name="WindBall" type="Area2D" parent="EarthWindCenter"]
position = Vector2( 0, -60 )
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="EarthWindCenter/WindBall"]
shape = SubResource( 12 )

[node name="Particles2D2" type="Particles2D" parent="EarthWindCenter/WindBall"]
amount = 10
lifetime = 0.2
local_coords = false
process_material = SubResource( 16 )

[node name="Sprite" type="Sprite" parent="EarthWindCenter/WindBall"]
texture = ExtResource( 6 )

[node name="EarthBall" type="Area2D" parent="EarthWindCenter"]
position = Vector2( 0, 60 )
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="EarthWindCenter/EarthBall"]
shape = SubResource( 12 )

[node name="Particles2D2" type="Particles2D" parent="EarthWindCenter/EarthBall"]
position = Vector2( -0.166847, 0.250282 )
amount = 10
lifetime = 0.2
local_coords = false
process_material = SubResource( 17 )

[node name="Sprite" type="Sprite" parent="EarthWindCenter/EarthBall"]
texture = ExtResource( 7 )

[node name="MissilesTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="HealthBar" parent="." instance=ExtResource( 3 )]
margin_left = -9.74297
margin_top = -16.6616
margin_right = -9.74297
margin_bottom = -16.6616
rect_scale = Vector2( 0.2, 0.2 )

[node name="EarthWindTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="ShieldCenter" type="Node2D" parent="."]

[node name="Shield" type="Particles2D" parent="ShieldCenter"]
position = Vector2( -19.6219, 0 )
amount = 30
lifetime = 0.2
local_coords = false
process_material = SubResource( 18 )
texture = ExtResource( 4 )
[connection signal="body_entered" from="Wzrok" to="." method="_on_Wzrok_body_entered"]
[connection signal="body_exited" from="Wzrok" to="." method="_on_Wzrok_body_exited"]
[connection signal="body_entered" from="WaterFireCenter/Fireball" to="." method="_on_Fireball_body_entered"]
[connection signal="body_entered" from="WaterFireCenter/Waterball" to="." method="_on_Waterball_body_entered"]
[connection signal="body_entered" from="EarthWindCenter/WindBall" to="." method="_on_WindBall_body_entered"]
[connection signal="body_entered" from="EarthWindCenter/EarthBall" to="." method="_on_EarthBall_body_entered"]
[connection signal="timeout" from="MissilesTimer" to="." method="_on_MissilesTimer_timeout"]
[connection signal="timeout" from="EarthWindTimer" to="." method="_on_EarthWindTimer_timeout"]
